# llm-grasp-capstone-docs

./: .gitignore  .gitmodules  README.md  frames_2024-04-20_21.40.22.gv
cpp_imagesub/: CMakeLists.txt  ReadMe.md  package.xml
cpp_imagesub/src/: image_subscriber.cpp
franka_env/: CMakeLists.txt  package.xml
franka_env/launch/: panda_simulation.launch.py
franka_env/urdf/: panda.urdf.xacro  panda_macro.urdf.xacro  panda_ros2control.xacro  panda_transmission.xacro
franka_env/worlds/: panda.world
frankaproject_env/: CMakeLists.txt  package.xml
frankaproject_env/config/: panda.srdf
frankaproject_env/launch/: panda.launch.py  panda_interface.launch.py
ggcnn/: test_ggcnn.py
ggcnn/output/models/240311_1156_training_example/: arch.txt
ggcnn/tensorboard/240311_1156_training_example/: events.out.tfevents.1710172568.hasithab-HP-Pavilion-Laptop-15-cs2xxx
ggcnn/utils/dataset_processing/: grasp.py
ggcnn_interface/: CMakeLists.txt  package.xml
ggcnn_interface/srv/: GraspPrediction.srv
lang-segment-anything/: .gitignore  .pre-commit-config.yaml  .style.yapf  Dockerfile  README.md  app.py  depth_map_0.h5  environment.yml  pyproject.toml  running_test.py
lang-segment-anything/lang_sam/: __init__.py  lang_sam.py  utils.py
langsam_interface/: CMakeLists.txt  package.xml
langsam_interface/msg/: BoundingBoxes.msg
langsam_interface/srv/: BoundingBoxPrediction.srv
langsam_vision/: package.xml  setup.cfg  setup.py
langsam_vision/langsam_vision/: vision_node.py  visualize.py
langsam_vision/langsam_vision/lang_sam_dir/: pyproject.toml  running_test.py  test-langSAM.py
langsam_vision/langsam_vision/lang_sam_dir/example_notebook/: getting_started_with_lang_sam.ipynb
langsam_vision/langsam_vision/lang_sam_dir/lang_sam/: __init__.py
move_panda/: package.xml  setup.cfg  setup.py
move_panda/move_panda/: move_panda_action_client.py
project_env/: CMakeLists.txt  ReadMe.md  package.xml
project_env/launch/: simulation.launch.py
project_env/urdf/: camera.urdf
project_env/worlds/: simulation.world
ros2_actions/: CMakeLists.txt  package.xml
ros2_data/: CMakeLists.txt  package.xml
ros2_execution/: CMakeLists.txt  package.xml
ros2_execution/scripts/: ros2_execution.py
ros2_ggcnn/: package.xml  setup.cfg  setup.py
ros2_ggcnn/ros2_ggcnn/: ggcnn_service.py  ggcnn_torch.py
ros2_grasping/: CMakeLists.txt  package.xml
