<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frankaproject_env</name>
  <version>0.0.0</version>
  <description>Package for spawning franka in gazebo with moveit integration</description>
  <maintainer email="hasithab@todo.todo">hasithab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros2_data</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
