<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_ggcnn</name>
  <version>0.0.0</version>
  <description>GGCNN Service-Client</description>
  <maintainer email="bogishettydheeraj007@gmail.com">dheeraj</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>ggcnn_interface</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>cv2</depend>
  <depend>cv_bridge</depend>
  <depend>numpy<depend>
  <depend>scipy<depend>
  <depend>torch<depend> -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
